# skatetrax_core

./: .gitignore  CHANGELOG.md  Pipfile  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
admin/migrations/: shared_mappings.yaml
alembic/: env.py
alembic/versions/: 001_add_equipment_fk_constraints.py  002_add_fs_uniquifier_to_uauthtable.py  003_add_role_and_user_roles.py  004_add_invite_tokens.py  005_add_password_reset_tokens.py  006_drop_legacy_roles.py  007_competition_results_schema.py  008_import_log.py  009_entry_date_column.py  010_rename_cjs_composition.py  011_entry_status_column.py  012_hosting_club_fk.py  013_event_cost_line_items.py  014_music_tables.py  015_contact_pref_share_token.py  016_add_compete_usa.py
migrations/: README.md  equipment_fk_apply.sql  equipment_fk_check_orphans.sql  equipment_fk_rollback.sql  fs_uniquifier_apply.sql  fs_uniquifier_rollback.sql  invite_tokens_apply.sql  invite_tokens_rollback.sql  password_reset_tokens_apply.sql  password_reset_tokens_rollback.sql  role_tables_apply.sql  role_tables_rollback.sql
models/: __init__.py  cyberconnect2.py  ice_time.py  setup_db.py  t_classes.py  t_coaches.py  t_equip.py  t_equip_skates.py  t_events.py  t_ice_time.py  t_icetype.py  t_journal.py  t_locations.py  t_maint.py  t_memberships.py  t_skaterMeta.py  t_tests.py
models/ops/: __init__.py  data_aggregates.py  updaters.py
tests/: conftest.py  test_aggregates.py  test_events.py  test_imports.py  test_parsers.py  test_queries.py  test_time.py  test_utils.py
utils/: common.py
(+25 files in other folders)
